--- a/app/src/main/res/layout/tab1contacts.xml
+++ b/app/src/main/res/layout/tab1contacts.xml
@@ -8,59 +8,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.q.project1.MainActivity$SectionsPagerAdapter">
 
-    <com.sothree.slidinguppanel.SlidingUpPanelLayout
-        xmlns:sothree="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/sliding_layout"
+    <ListView
+        android:id="@+id/contacts_listview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="bottom"
-        sothree:umanoPanelHeight="0dp"
-        sothree:umanoShadowHeight="0dp">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent" />
 
-        <ListView
-            android:id="@+id/contacts_listview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/transparent"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2">
-
-                <Button
-                    android:id="@+id/callButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_weight="1"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:background="#1E88E5"
-                    android:textColor="#FFFFFF"
-                    android:text="CALL" />
-
-                <Button
-                    android:id="@+id/editButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_weight="1"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:background="#2196F3"
-                    android:textColor="#FFFFFF"
-                    android:text="EDIT" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
 </RelativeLayout>
